# turtleComplete

./: .gitignore  init_commands.txt
avoid_obstacles/: CMakeLists.txt  package.xml  setup.py
avoid_obstacles/launch/: avoid_obstacles.launch
avoid_obstacles/nodes/: avoid_obstacles.py
camera_node/: CMakeLists.txt  package.xml  setup.py
camera_node/launch/: camera_node.launch
camera_node/nodes/: camera_node.py
correct_pos_srv/: CMakeLists.txt  package.xml
correct_pos_srv/srv/: CorrectPosSrv.srv
drive_on_tag_using_camera/: CMakeLists.txt  package.xml  setup.py
drive_on_tag_using_camera/launch/: drive_on_tag_using_camera.launch
drive_on_tag_using_camera/nodes/: drive_on_tag_using_camera.py
explore_labyrinth/: CMakeLists.txt  README.md  package.xml  setup.py
explore_labyrinth/launch/: explore_labyrinth.launch
explore_labyrinth/nodes/: explore_labyrinth.py
explore_labyrinth_srv/: CMakeLists.txt  package.xml
explore_labyrinth_srv/srv/: ExploreLabyrinth.srv
map_tag_handler/: CMakeLists.txt  package.xml  setup.py
map_tag_handler/launch/: map_tag_handler.launch
map_tag_handler/nodes/: distances.txt  map_tag_handler.py  myMap.pgm  nameOfFile.yaml  test24041814.yaml  x.txt  y.txt
map_tag_handler_srv/: CMakeLists.txt  package.xml
map_tag_handler_srv/srv/: TagService.srv  map_tag_handler_srv.srv
movement_controler/: CMakeLists.txt  package.xml  setup.py
movement_controler/launch/: movement_controler_node.launch
movement_controler/nodes/: movement_controler_node.py
movement_controler_2/: CMakeLists.txt  package.xml  setup.py
movement_controler_2/launch/: movement_controler_2.launch
movement_controler_2/nodes/: movement_controler_2.py
pixy_ros-master/pixy_node/: CMakeLists.txt
pixy_ros-master/pixy_node/launch/: pixy_usb.launch
ros_tutorials_topic/: CMakeLists.txt  package.xml
ros_tutorials_topic/src/: topic_publisher.cpp
save_tag_msg/: CMakeLists.txt  package.xml
save_tag_msg/msg/: SaveTag.msg
tag_pos_camera/: CMakeLists.txt  package.xml  setup.py
tag_pos_camera/launch/: tag_pos_camera.launch
tag_pos_camera/nodes/: tag_pos_camera.py
turtlebot3/turtlebot3_example/nodes/: turtlebot3_marker_server
turtlebot3/turtlebot3_navigation/launch/: amcl.launch  move_base.launch  turtlebot3_navigation.launch
turtlebot3/turtlebot3_navigation/maps/: Test_new.pgm  Test_new.yaml  myMapt1.pgm  myMapt1.yaml  mymap.pgm  nameOfFile.pgm  teat27021732.pgm  teat27021732.yaml  test1444.pgm  test1444.yaml  test24041814.pgm  test26021450.pgm  test26021450.yaml  test26021629.pgm  (+1 more)
(+13 files in other folders)
